jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Björn "Vampire" Kautler, Jarek Czekalski, Thomas Meyer,
Matthieu Casanova, Alan Ezust, Malathi, Vladimir Avdonin, Eric Le Lay,
Darien Brown, Steve snarum-micron, EdorFaus, Brian Clapper and Maik Nijhuis
for contributing to this release.

{{{ Bug fixes

- Added missing localization string:
  options.plugin-manager.list-cache.minutes (#3574373 Matthieu Casanova)

- Correctly determine whether Look and Feel did change to not touch it if it
  stays the same as this might cause delays and Exceptions.
  (Björn "Vampire" Kautler)

- Handle menu bar mnemonics with precedence over otherwise defined shortcuts as
  they are shown visually to the user (#3528208 Björn "Vampire" Kautler)

- Fix keymap duplication (Björn "Vampire" Kautler)

- Fix broken keymap properties (Björn "Vampire" Kautler)

- Fix AutoSave exception after multiline cut (#3017650 Thomas Meyer)

- Undomanager: Don't compact significant edits (#patch 3560615 Thomas Meyer)

- Fixed undo after replace all with beanshell only first occurance
  (#3551910 Thomas Meyer)

- Search all buffers now observes current BufferSet scope and can be restricted
  to the current view's buffers when scope is not global. (#3423442 Alan Ezust)

- Fix File status checking after buffer switch (#1871440 Alan Ezust)

- Fix File status checking before save (#3562315 Alan Ezust) [merged into 5.0.x]

- Fixed the StandaloneTextArea that cannot load keymaps
  (#3562023 Matthieu Casanova) [merged into 5.0.x]

- The .jedit/modes/catalog is now written using UTF-8 instead of default
  OS encoding (#3560800 Matthieu Casanova) [merged into 5.0.x]

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova) [merged into 5.0.x]
